# coevolve

./: .gitignore  README.md  go.mod  go.sum  pyproject.toml
cmd/coevolve/: main.go
coevolve/: __init__.py  capabilities.py  events.py
coevolve/integrations/: base.py
docs/: competitive-landscape.md
docs/borrow/: 2026-07-09-mini-ork-borrows.md
internal/core/: events.go  integration.go  provenance.go
internal/plan/: catalog.go  suggest_test.go
internal/run/: controller.go  opencode_serve.go
internal/seams/: contextnest.go  db.go  home.go  learning.go  logs.go  router.go  runs.go  topology.go
internal/session/: log.go
internal/tui/: app.go  keys.go  mode.go  palette.go  render_test.go
internal/tui/modes/: cost.go  ctxnest.go  home.go  learning.go  logs.go  render_test.go  router.go  runs.go  topology.go
kickoffs/: EPIC-01-foundation.md  EPIC-02-miniork-mcp-server.md  EPIC-02-opencode-worker-batch.md  EPIC-03-cn-traceotter-tools.md  EPIC-03-seams.md  EPIC-04-cli-bundle.md  EPIC-04-integrations.md  EPIC-05-live-flow.md  EPIC-05-pipeline-control.md  EPIC-06-cli-home.md  EPIC-06-dashboards.md  EPIC-07-opencode-serve-live.md  EPIC-07-run-control.md  EPIC-08-opencode-serve-live.md  EPIC-08-serve-go.md  EPIC-08-tui-shell.md  EPIC-09-e2e-proof.md  EPIC-09-modes.md  EPIC-10-docs-packaging.md  EPIC-10-proof-docs.md  INDEX.md  bug-audit-coevolve.md  serve-worker.md
reference/python-prototype/coevolve/: registry.py
