[project]
name = "coevolve"
version = "0.0.1"
description = "Extensible CLI over mini-ork + ContextNest + TraceOtter, opencode worker"
requires-python = ">=3.11"
dependencies = ["httpx>=0.27", "rich>=13", "textual>=0.60"]

[project.scripts]
coevolve = "coevolve.cli:main"

[tool.coevolve]
# mini-ork is a runtime dependency reached via MINI_ORK_ROOT (not vendored).
mini_ork_root_env = "MINI_ORK_ROOT"
